[tool.poetry]
name = "chutes-audit"
version = "0.0.1"
description = "chutes.ai/subnet 64 auditing system"
authors = ["Jon Durbin <jon@chutes.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = ">=3.11.11,<4.0.0"
asyncpg = ">=0.30.0,<0.31.0"
sqlalchemy = ">=2.0.37,<3.0.0"
loguru = ">=0.7.3,<0.8.0"
datasets = ">=3.2.0,<4.0.0"
munch = "<2.6"
ruff = ">=0.9.4,<0.10.0"
pydantic = ">=2.9.2,<3.0.0"
orjson = ">=3.10.15,<4.0.0"
pybase64 = ">=1.4.0,<2.0.0"
term-image = ">=0.7.2,<0.8.0"
langdetect = ">=1.0.9,<2.0.0"
sounddevice = ">=0.5.1,<0.6.0"
greenlet = "^3.1.1"
soundfile = "^0.13.1"
backoff = "^2.2.1"
tqdm = "^4.67.1"
fiber = {git = "https://github.com/rayonlabs/fiber.git", rev = "2.2.3"}
cryptography = "<44"
setuptools = "^75.8.0"
psutil = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
